filter_macros/tests/try/err/not_public.rs
use filter_macros::Query;

#[derive(Query)]
struct Private {
    pub name: String,
}
fn main() {}
